fix: alignment

--- a/src/assets/css/MainWeatherCard.css
+++ b/src/assets/css/MainWeatherCard.css
@@ -7,8 +7,9 @@ h5,
 h3 {
 	padding: 2px;
 }
-.container {
-	margin-left: 135px;
+.container{
+	display: flex;
+	justify-content: center;
 }
 .card {
 	background-color: white;
